--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 
 PORT= 3500
-
+DB_USER= chat_main_user
+DB_PASS=PoPoxJDFkrm16scn
+DB_CNN_STRING= mongodb+srv://chat_main_user:PoPoxJDFkrm16scn@backend-cafe.y7fo5.mongodb.net/chatDB
+JWT_KEY= secret987654ñ@**
