--- a/package.json
+++ b/package.json
@@ -12,8 +12,16 @@
   "license": "ISC",
   "dependencies": {
     "@types/socket.io": "^3.0.2",
+    "bcryptjs": "^2.4.3",
+    "cloudinary": "1.24.0",
+    "cors": "^2.8.5",
     "dotenv": "^11.0.0",
     "express": "^4.17.1",
-    "socket.io": "^4.4.1"
+    "express-fileupload": "1.2.1",
+    "express-validator": "6.9.2",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.2.4",
+    "socket.io": "^4.4.1",
+    "uuid": "^8.3.2"
   }
 }
