--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js",
-    "start": "node index.js"
+    "start": "nodemon node index.js "
   },
   "author": "",
   "license": "ISC",
@@ -19,6 +19,7 @@
     "express": "^4.17.1",
     "express-fileupload": "1.2.1",
     "express-validator": "6.9.2",
+    "formidable": "2.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.4",
     "socket.io": "^4.4.1",
