--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js",
-    "start": "nodemon node index.js "
+    "dev": "index.js",
+    "start": "node index.js "
   },
   "author": "",
   "license": "ISC",
