updating new version

--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,5 @@
 
-#URL page es el url del frontend
+#URL page es el url del frontend debe ser sin "/" example: "https://social-linked.netlify.app"
 URL_PAGE=
 PORT= 3500
 CLOUDINARY_URL=
